# WillGPT2

./: .gitignore  README.md  config.py  dataset.py  generate.py  main.py  model.py  nvda.md  pyproject.toml  test.ipynb  test_model.py  torch_test.py  train.py
